# magangIris

./: CMakeLists.txt  README.md
src/: tugasdua.cpp  tugassatu.cpp  tugastiga.cpp
